Redesign the app

--- a/backend/.env
+++ b/backend/.env
@@ -1,13 +1,11 @@
 MONGO_URI=mongodb+srv://devshopsuite:w1TedpTpXqfXAcSA@staging.hcdatc9.mongodb.net/suite-1?retryWrites=true&w=majority
 CLIENT_ID=p3Xv0PiojNUCgLXoaKv5Z
 CLIENT_SECRET=DtCsTHYJJ8Pyoa483c_xWxr8Cp__Ll3p4FdijzpT2mqXDaoJ
-# BASE_URL=https://1z1zm52s-3000.uks1.devtunnels.ms
-BASE_URL=http://localhost:3000
+BASE_URL=https://1z1zm52s-3000.uks1.devtunnels.ms
 
 SCOPES=orders
 JWT_SECRET=Y6kGp3s7AQQ7QNqeh3uvK8DT3JwCVaiWuz4M9TkEMcA=
-FRONTEND_URL=http://localhost:5173
-# FRONTEND_URL=https://1z1zm52s-5173.uks1.devtunnels.ms
-# FRONTEND_URL=https://1z1zm52s-5173.uks1.devtunnels.ms/
+# FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://1z1zm52s-5173.uks1.devtunnels.ms
 
 ADCLAIR_URL=https://16b0j0xs-8080.uks1.devtunnels.ms
