--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # BACKEND_URL=https://1z1zm52s-3000.uks1.devtunnels.ms
-REACT_APP_BACKEND_URL=http://localhost:3000
+REACT_APP_BACKEND_URL=https://1z1zm52s-3000.uks1.devtunnels.ms
 # REACT_APP_BACKEND_URL=https://1z1zm52s-3000.uks1.devtunnels.ms
